--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "dependencies": {
     "@bitauth/libauth": "^1.17.1",
     "axios": "^1.7.7",
+    "color-parse": "^2.0.2",
     "dot-prop": "^9.0.0",
     "fastify": "^5.0.0",
     "image-size": "^1.1.1",
